--- a/style2.css
+++ b/style2.css
@@ -7,7 +7,15 @@
     src: local('Fascinate Inline'),local('Times New Roman') ,local('Roboto'),local('FascinateInline-Regular')
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
-  
+.row {
+    display: flex;
+}
+
+/* Create three equal columns that sits next to each other */
+.column {
+    flex: 50%;
+    padding: 2px;
+}
 .container{
     width: 600px;
     height: 600px;
@@ -34,12 +42,12 @@
     font-size: 80px;
     font-family:'Facisnate Inline', cursive;
     color: #c96229;
-    margin: 50px 0 50px 0;
+    margin: 50px 0 25px 0;
 }
 
 .options h2{
     font-family: 'Times New Roman', 'Arial Narrow', Arial, sans-serif;
-    font-size: 40px;
+    font-size: 30px;
     text-align: center;
     color: #953fab;
     font-weight: italic;
@@ -72,6 +80,20 @@
     border-radius: 5px;
     margin-left: 20px;
     width: 200px;
+    text-align: center;
+    cursor: pointer;
+    border: 1px solid #df8f2c ;
+}
+
+.options .lev1, .lev2, .lev3, .lev4{
+    font-family: 'Roboto', 'Arial Narrow', Arial, sans-serif;
+    padding:2px;
+    background-color: #FFF;
+    color: #f45234;
+    font-size: 25px;
+    border-radius: 5px;
+    margin-left: 80px;
+    width: 50px;
     text-align: center;
     cursor: pointer;
     border: 1px solid #df8f2c ;
