--- a/style2.css
+++ b/style2.css
@@ -4,7 +4,7 @@
     font-style: italic;
     font-weight: 400;
     font-display: swap;
-    src: local('Fascinate Inline'),local('Times New Roman') ,local('Roboto'),local('FascinateInline-Regular')
+    src: local('Fascinate Inline'),local('Times New Roman') ,local('Roboto'),local('FascinateInline-Regular');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
 .row {
@@ -13,7 +13,7 @@
 
 /* Create three equal columns that sits next to each other */
 .column {
-    flex: 50%;
+    flex: 25%;
     padding: 2px;
 }
 .container{
@@ -28,6 +28,9 @@
     position: absolute;
     border: 5px solid #d2251b;
     
+}
+#Im1{
+    position: center;
 }
 
 .options{
@@ -50,7 +53,7 @@
     font-size: 30px;
     text-align: center;
     color: #953fab;
-    font-weight: italic;
+    /*font-weight: italic;*/
 }
 
 .options div{
